# fwk_core

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  README.md  index.rst  settings.json  settings.yml
.github/workflows/: docs.yml
doc/: Doxyfile.inc  README.rst  copyright.rst  exclude_patterns.inc  index.rst
doc/shared/: legal.rst
examples/: example.cmake
l2_cache/: CMakeLists.txt
modules/: CMakeLists.txt
modules/clock_control/: CMakeLists.txt
modules/clock_control/api/: xcore_clock_control.h
modules/experimental/dsp_filters/: CMakeLists.txt
modules/experimental/dsp_filters/api/: dsp_filters.h
modules/experimental/dsp_filters/src/: dsp_filters.c
modules/inferencing/: CMakeLists.txt
modules/l2_cache/: CMakeLists.txt
modules/legacy_compat/: CMakeLists.txt
modules/multitile_support/: CMakeLists.txt  README.md
modules/multitile_support/api/: main_tile.h  soc_xscope_host.h
modules/multitile_support/src/: tile_map.xc  tile_map_defaults.c  xscope_host_support.c
modules/multitile_support/tests/: tests.cmake
modules/multitile_support/tests/intertile_channels/: CMakeLists.txt
modules/multitile_support/tests/intertile_channels/src/: intertile_channel_tests.c
modules/otpinfo/: CMakeLists.txt
modules/random/: CMakeLists.txt
modules/trycatch/: CMakeLists.txt
modules/utils/: CMakeLists.txt
modules/utils/src/: xcore_printf.c
modules/xcore_math/: CMakeLists.txt
modules/xs3_math/: CMakeLists.txt
test/: tests.cmake
test/tile_map_defines/: CMakeLists.txt
test/tile_map_defines/modules/fwk_rtos/doc/programming_guide/reference/rtos_drivers/: trace.rst
test/tile_map_defines/modules/fwk_rtos/modules/sw_services/fatfs/FreeRTOS/: ffconf.h
test/tile_map_defines/modules/fwk_rtos/test/rtos_drivers/clock_control/src/: FreeRTOSConfig.h
test/tile_map_defines/modules/fwk_rtos/test/rtos_drivers/hil/src/: FreeRTOSConfig.h
test/tile_map_defines/modules/fwk_rtos/test/rtos_drivers/usb/: serial_send_receive.py
test/tile_map_defines/modules/fwk_rtos/test/rtos_drivers/usb/src/individual_tests/usb/local/: usb_cdc_test.c  usb_cdc_test.h  usb_dfu_test.c  usb_dfu_test.h  usb_mount_test.c  usb_mount_test.h  usb_sof_test.c  usb_sof_test.h
test/tile_map_defines/modules/fwk_rtos/test/rtos_drivers/wifi/src/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  ff_appconf.h
test/tile_map_defines/modules/fwk_rtos/tools/datapartition_mkimage/: CMakeLists.txt  datapartition_mkimage.c
test/tile_map_defines/src/: test.c
xs3_math/: CMakeLists.txt
